<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.DashboardFragment">

    <TextView
        android:id="@+id/hidden_date"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/top_dashboard_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/home_top_layout_style">

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/top_tab_layout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bar_chart_tab"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/colorWhite"
                android:text="@string/bar_chart_text"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:background="@drawable/bar_chart_tab_style"/>

            <Button
                android:layout_toEndOf="@id/bar_chart_tab"
                android:id="@+id/pie_chart_tab"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/pie_chart_text"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/selected_pie_chart_tab_style"/>

        </RelativeLayout>
        <!--pick date-->
        <ImageView
            android:id="@+id/select_date_for_pie_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/date_dashboard_title"
            android:layout_below="@id/top_tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dashboard_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/report_balance_layout_style"
        android:layout_marginTop="100dp"
        android:elevation="2dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/dashboard_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_usage"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dashboard_balance_title">
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/dashboard_balance_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:text="@string/total_usage_amount"/>

            <TextView
                android:layout_centerVertical="true"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/dashboard_balance_amount"
                android:layout_marginStart="1dp"
                android:textColor="@color/colorCyan"
                android:text="@string/currency_unit"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/bar_chart_layout"
        android:layout_marginTop="20dp"
        android:layout_below="@id/dashboard_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pie_chart_layout"
        android:layout_marginTop="20dp"
        android:layout_below="@id/dashboard_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/no_usage_for_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_usage"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:textColor="@color/colorCyan"
        android:drawableLeft="@drawable/ic_no_usage"/>


</RelativeLayout>