<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp">

    <RelativeLayout
        android:elevation="1dp"
        android:id="@+id/add_new_category_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/cancel_btn"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_24dp"
            android:rotation="180"/>

        <TextView
            android:layout_toEndOf="@id/cancel_btn"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_category"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_category_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_category_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <EditText
            android:id="@+id/new_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/category_name"
            android:drawableLeft="@drawable/ic_style_black_24dp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_below="@id/new_category_name_layout"
        android:id="@+id/save_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/save"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"/>

</RelativeLayout>