<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MoreFragment">

    <RelativeLayout
        android:elevation="2dp"
        android:id="@+id/more_top_title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/more_top_title">

        <TextView
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorCyan"
            android:text="@string/general"/>

        <RelativeLayout
            android:layout_below="@id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/manage_category_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/item_background_style">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_style_black_24dp"/>

        </RelativeLayout>

        <TextView
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/manage_category_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/management_category"
            android:textSize="18sp"
            android:textColor="@color/colorGray"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>