<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <TextView
        android:id="@+id/hidden_date"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreyBg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/home_top_layout_style">

                <TextView
                    android:id="@+id/top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/app_name"/>

                <TextView
                    android:id="@+id/date_title"
                    android:layout_below="@id/top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/app_name"/>

                <ImageView
                    android:id="@+id/add_new_category"
                    android:layout_toStartOf="@id/range_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_black_24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"/>

                <ImageView
                    android:id="@+id/range_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/balance_layout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/report_balance_layout_style"
                android:layout_marginTop="100dp"
                android:elevation="2dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/balance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_usage"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/balance_title">

                    <TextView
                        android:layout_centerVertical="true"
                        android:id="@+id/all_total_usage_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/total_usage_amount"/>

                    <TextView
                        android:layout_centerVertical="true"
                        android:textSize="22sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/all_total_usage_amount"
                        android:layout_marginStart="1dp"
                        android:textColor="@color/colorCyan"
                        android:text="@string/currency_unit"/>

                </RelativeLayout>

            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_grid_layout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/balance_layout"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridView
                android:id="@+id/category_list_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="20dp"
                android:numColumns="3"
                android:scrollbarThumbVertical="@android:color/transparent"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/category_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreyBg"
        android:visibility="invisible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/home_top_layout_style">

        <TextView
            android:id="@+id/top_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/date_category_title"
            android:layout_below="@id/top_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"/>

        <ImageView
            android:id="@+id/add_new_item"
            android:layout_toStartOf="@id/item_range_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"/>

        <ImageView
            android:id="@+id/item_range_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/category_balance_layout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/report_balance_layout_style"
            android:layout_marginTop="100dp"
            android:elevation="2dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/category_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_usage"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_balance_title">
                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/all_item_usage_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/total_usage_amount"/>

                <TextView
                    android:layout_centerVertical="true"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/all_item_usage_amount"
                    android:layout_marginStart="1dp"
                    android:textColor="@color/colorCyan"
                    android:text="@string/currency_unit"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/category_balance_layout"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/item_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarThumbVertical="@android:color/transparent"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/no_usage_for_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_usage"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:textColor="@color/colorCyan"
        android:drawableLeft="@drawable/ic_no_usage"/>

</RelativeLayout>